<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>

    <!-- custom strings -->
    <string name="app_text">My Nanodegree Apps!</string>
    <string name="app1">Spotify Streamer</string>
    <string name="app2">Super Duo</string>
    <string name="app3">Build It Bigger</string>
    <string name="app4">XYZ Reader</string>
    <string name="app5">Capstone</string>
    <string name="launch_app_toast">This button will launch my %s app!</string>
</resources>
