<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.arkaprava.myappportfolio.MainActivity"
    tools:showIn="@layout/activity_main">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:orientation="vertical"
            android:paddingTop="@dimen/margin"
            android:paddingBottom="@dimen/margin">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/app_text"
                android:textColor="@color/app_text_color"
                android:textSize="@dimen/app_text_size"
                android:layout_marginBottom="@dimen/margin"/>

            <Button
                android:id="@+id/app1"
                style="@style/ButtonTheme"
                android:text="@string/app1" />

            <Button
                android:id="@+id/app2"
                style="@style/ButtonTheme"
                android:text="@string/app2" />

            <Button
                android:id="@+id/app3"
                style="@style/ButtonTheme"
                android:text="@string/app3" />

            <Button
                android:id="@+id/app4"
                style="@style/ButtonTheme"
                android:text="@string/app4" />

            <Button
                android:id="@+id/app5"
                style="@style/CapstoneTheme"
                android:text="@string/app5" />
        </LinearLayout>

    </ScrollView>
</RelativeLayout>
